--- a/css/about_us.css
+++ b/css/about_us.css
@@ -12,3 +12,7 @@
     top: 35%;
     left: 25%;
 }
+
+.heading-font{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
