new fontfamily add

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -16,3 +16,7 @@
 .heading-font{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.pragraph-text{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
