--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,6 @@
 header{
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
 }
 .bg-img{
     background-image: url("./../imgs/s5.jpg");  /* The image used as the background */
@@ -119,6 +117,7 @@ header{
     z-index: 999;
     top: 0;
     left: 0;
+    transition: 0.5s; 
     background-color: rgb(255,255,255);
     background-color: rgba(255,255,255); /* Black with a little bit see-through */
   }
@@ -131,6 +130,7 @@ header{
     text-align: center;
     margin-top: 30px;
     margin: auto;
+    transition: 0.5s; 
   }
   .search-title{
     font-family: "Space Grotesk", sans-serif;
@@ -180,5 +180,58 @@ header{
   
   .overlay button:hover {
     background: #000;
+  }
+  .sidenav {
+    height: 100%; 
+    font-family: "Space Grotesk", sans-serif;
+    width: 0; 
+    position: fixed;
+    z-index: 1000;
+    top: 0; 
+    right: 0;
+    background-color: #fff; 
+    overflow-x: hidden; 
+    padding-top: 60px; 
+    transition: 0.5s; 
+    box-shadow: -2px 0 5px #a3a3a3;
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000;
+    display: block;
+    transition: 0.3s;
+  }
+  .cart{
+    font-family: "Space Grotesk", sans-serif;
+    margin-left: 30%;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    font-family: "Space Grotesk", sans-serif;
+    left: 10px;
+    font-size: 36px;
+    margin-right: 5px;
+  }
+  .closebtn:hover{
+    color: #e83e8c;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
   }
   
