--- a/css/review_page.css
+++ b/css/review_page.css
@@ -96,8 +96,8 @@
         .send{
             width: 200px;
             height: 30px;
-            background: brown;
-            border: 2px solid brown;
+            background: #e83e8c;
+            border: 2px solid #e83e8c;
             margin: 10px 165px;
             color: black;
             font-size: 15px;
