--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -1,58 +1,240 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #ffd700;
-    padding: 20px;
-  }
-  
-  main {
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
+header{
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+}
+.bg-img{
+    background-image: url("./../imgs/s5.jpg");  /* The image used as the background */
+    min-height: 100vh;
+    position: relative;
+    /* width: 100%;                     Set the type of gradient (linear or radial) */
+}
+.flex{
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 20px;
-  }
-  
-  .menu, .order {
-    width: 45%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 20px;
-  }
-  
-  footer {
-    background-color: #ffd700;
+}
+.right-flex{
+    position: absolute;
+    left: 50px;
+    cursor: pointer;
+}
+.left-flex{
+    position: absolute;
+    right: 50px;
+}
+.mid-flex{
+    position: absolute;
+    left:  30%;
     text-align: center;
-    padding: 10px;
+    display: block;
+    justify-content: space-around;
+    z-index: 999;
+}
+.menu-list li a{
+    font-size: 18px;
+    text-decoration: none;
+    color: #000;
+    margin: 20px;
+    transition: .5s;
+}
+.menu-list li a:hover{
+    color: #e83e8c;;
+}
+.nav-icons{
+    height: 27px;
+    margin: 10px;
+    cursor: pointer;
+} 
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+/* padding: 10px; */
+    margin: auto;
+    height: 100px;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    box-shadow: 0px 1px 15px #a3a3a3;
+    position: sticky;
+    top: 0%;
+    z-index:  100;
+}
+.heading{
+    font-size: 20px;
+    margin-bottom: -2px;
+}
+.text-overlay{
+    text-align: right;
+    color: #fff;
+    width: 46%;
+    float: right;
+    margin-top: 200px;
+    margin-right: 10%;
+    font-size: 30px;
+    transition: ease-in;
+}
+.buyNow-btn{
+    border: 1px solid black;
+    margin: 20px;
+    padding: 15px 30px;
+    background-color: #fff;
+    color: black;
+    border-radius: 60px;
+    font-weight: bold;
+    font-family: "Space Grotesk", sans-serif;
+    text-decoration: none;
+    transition: all .3s ease-out;
+}
+.buyNow-btn:hover{
+    background-color:#000;
+    color: white;
+}
+.slide-btn-comtain{
+    display: flex;
+    position: absolute;
+    bottom: 1px;
+    left: 60%;
+   
+}
+.slide-btn{
+    height: 20px;
+    cursor: pointer;
+    background-color: transparent;
+
+}
+.btn-2{
+    height: 20px;
+    margin-left: 40% ;
+    background-color: transparent;
+
+}
+
+/* The overlay effect with black background */
+.overlay {
+    height: 70%;
+    width: 100%;
+    display: none;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    transition: 0.5s; 
+    background-color: rgb(255,255,255);
+    background-color: rgba(255,255,255); /* Black with a little bit see-through */
   }
   
-  button {
-    background-color: #ffd700;
+  /* The content */
+  .overlay-content {
+    position: relative;
+    top: 46%;
+    width: 80%;
+    text-align: center;
+    margin-top: 30px;
+    margin: auto;
+    transition: 0.5s; 
+  }
+  .search-title{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: bold;
+    text-align: center;
+
+  }
+  
+  /* Close button */
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 40px;
+    font-family: "Space Grotesk", sans-serif;
+    cursor: pointer;
+    color: black;
+  }
+  
+  .overlay .closebtn:hover {
+    color: #e83e8c;;
+  }
+  
+  /* Style the search field */
+  .overlay input[type=text] {
+    padding: 15px;
+    font-size: 17px;
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+    margin-left: 10%;
+    font-family: "Space Grotesk", sans-serif;
+    box-shadow: 0 2px 1px black;
+    float: left;
+    width: 80%;
+    background: white;
+  }
+  
+  /* Style the submit button */
+  .overlay button {
+    float: left;
+    width: 20%;
+    padding: 15px;
+    background: #fff;
+    font-size: 17px;
+    border: none;
     cursor: pointer;
   }
   
-  button:hover {
-    background-color: #ffcc00;
+  .overlay button:hover {
+    background: #000;
+  }
+  .sidenav {
+    height: 100%; 
+    font-family: "Space Grotesk", sans-serif;
+    width: 0; 
+    position: fixed;
+    z-index: 1000;
+    top: 0; 
+    right: 0;
+    background-color: #fff; 
+    overflow-x: hidden; 
+    padding-top: 60px; 
+    transition: 0.5s; 
+    box-shadow: -2px 0 5px #a3a3a3;
   }
   
-  @media (max-width: 768px) {
-    main {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .menu, .order {
-      width: 90%;
-    }
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000;
+    display: block;
+    transition: 0.3s;
   }
+  .cart{
+    font-family: "Space Grotesk", sans-serif;
+    margin-left: 30%;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    font-family: "Space Grotesk", sans-serif;
+    left: 10px;
+    font-size: 36px;
+    margin-right: 5px;
+  }
+  .closebtn:hover{
+    color: #e83e8c;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  
   .name-container{
     background-image: url(./../imgs/menu-card/background-image.jpg);
     background-position: center;
