from margin added

--- a/css/review_page.css
+++ b/css/review_page.css
@@ -125,7 +125,7 @@
         }
         .rvw {
             background-color:#e83e8c;
-        
+        margin:10px auto;
         border-radius: 15px;
         width:500px;
         
