--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+    padding:0;
+}
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
 header{
     font-family: "Space Grotesk", sans-serif;
@@ -233,14 +237,22 @@ header{
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+    .name-container{background-position: left;}
   }
   
   .name-container{
     background-image: url(./../imgs/menu-card/background-image.jpg);
     background-position: center;
     background-size: cover;
+    padding-top: 90px;
+}
+.page-heading {
+    font-size: 50px;
 }
   .category-img{
     height: 100px;
     border-radius: 50%;
+  }
+  .decoration{
+    text-decoration: none;
   }
