search , wishlist, filter ,cart icons added in menucard icon folder.

--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -259,14 +259,19 @@ header{
   }
   .flavour-img{
     height: 300px;
-    padding: 20px;
+    padding-top: 15px;
   
 
   }
   .flavour-description{
     margin:10px 77px;
+    font-weight: bold;
   }
   .flavour-price{
     color: #e83e8c;
     padding-left: 10px;
+  }
+  .effect-hover{
+
+    
   }
