--- a/css/about_us.css
+++ b/css/about_us.css
@@ -31,3 +31,10 @@
     width: 550px;
     box-shadow: 13px 15px 9px 3px  #c2c2a3;
 }
+
+.paragraph-img:hover{
+    transform: scale(0.9);
+    z-index: 2;
+    transition: 0.3s;
+    box-shadow: 0 0 15px 9px #c2c2a3;
+}
