--- a/css/contact_page.css
+++ b/css/contact_page.css
@@ -14,10 +14,41 @@ iframe{
     margin-top: 10px;
     /* box-shadow: 1px 1px 10px 2px rgb(14, 13, 13); */
 }
-p{
-    font-size: 20px;
-}
 .contact{
     padding-left: 8px;
+    width: 50%;
+}
+.contact-main{
+    margin-top: 60px;
+    display: flex;
+}
+.name-customer{
     width: 600px;
+    height: 50px;
+}
+.message-customer{
+    width: 600px;
+    height: 150px;
+}
+.button{
+    width: 600px;
+    height:50px ;
+    background-color: black;
+    color: white;
+}
+.fa-solid{
+    font-size: 25px;
+    margin-left: 10px;
+}
+.a{
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(109, 102, 93);
+}
+span{
+    font-size: 20px;
+    font-weight: 600;
+}
+a:hover{
+    color: rgb(0, 0, 0);
 }
