--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body{
     padding:0;
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
+    background-color: aliceblue;
 }
 .visit{
     display: block;
