--- a/css/buy_now.css
+++ b/css/buy_now.css
@@ -9,4 +9,10 @@ body {
     display: block;
     margin-bottom: 5px;
   }
-  
+  input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
