--- a/css/review_page.css
+++ b/css/review_page.css
@@ -7,3 +7,11 @@ body{
     align-items:center;
     min-height:100vh;
 }
+.container{
+    background-color:#FFC0CB;
+    padding:20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    text-align: center;
+    width:400px;
+}
