all star css add

--- a/css/review_page.css
+++ b/css/review_page.css
@@ -27,3 +27,18 @@ h1{
     cursor:pointer;
     margin:0 5px;
 }
+.one{
+    color:gold;
+}
+.two{
+    color:gold;
+}
+.three{
+    color:gold;
+}
+.four{
+    color:gold;
+}
+.five{
+    color:gold;
+}
