--- a/css/review_page.css
+++ b/css/review_page.css
@@ -63,3 +63,9 @@ button:hover{
     margin-top:20px;
     text-align:left;
 }
+.review{
+    border:1px solid #ccc;
+    border-radius:4px;
+    padding:10px;
+    margin:10px 0;
+}
