--- a/css/index.css
+++ b/css/index.css
@@ -39,3 +39,12 @@ body{
     border: 3px solid  #e83e8c;
     opacity: .8;
 }
+.Seller-container{
+    margin-top: 5%;
+}
+.seller-heading{
+    margin: 50px 38%;
+    flex-direction: row;
+    gap: 100px;
+    font-size: 18px;
+}
