--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body{
 .headings{
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
-    font-size: 35px;
+    font-size: 45px;
    text-align: center;
   margin-left: 40%;
   margin-top: 200%;
@@ -46,5 +46,8 @@ body{
     margin: 50px 38%;
     flex-direction: row;
     gap: 100px;
-    font-size: 18px;
+    font-size: 20px;
+}
+.product-container{
+    
 }
