--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ body{
     padding:0;
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
-    background-color: aliceblue;
+    background-color: #fff;
 }
 .visit{
     display: block;
@@ -49,5 +49,8 @@ body{
     font-size: 20px;
 }
 .product-container{
-    
+    flex-direction: column;
+}
+.products{
+    height: 300px;
 }
