--- a/css/review_page.css
+++ b/css/review_page.css
@@ -50,7 +50,7 @@ textarea{
     border-radius: 4px;
 }
 button{
-    background-color: #007BFF;
+    background-color: red;
     color:white;
     padding:10px 20px;
     border:none;
