--- a/css/index.css
+++ b/css/index.css
@@ -54,3 +54,46 @@ body{
 .products{
     height: 300px;
 }
+/* background-color: #e83e8c;
+color: white;
+border:#e83e8c 1px solid;
+text-decoration: none;
+
+} */
+.flavour-container{
+
+margin-left: 50px;
+}
+.flavour-img{
+height: 300px;
+padding-top: 15px;
+cursor: pointer;
+
+}
+.flavour-description{
+margin:10px 77px;
+font-weight: bold;
+cursor: pointer;
+}
+.flavour-price{
+color: #e83e8c;
+padding-left: 10px;
+cursor: pointer;
+}
+.effect-hover{
+width:200px;
+padding: 5px 10px;
+padding-left: 70px;
+display: flex;
+justify-content: space-around;
+visibility: hidden;
+
+}
+
+.flavour-card:hover{
+.effect-hover{
+    visibility: visible;
+    transition:1.25s;
+  
+}
+}
