changes in index

--- a/css/index.css
+++ b/css/index.css
@@ -97,3 +97,9 @@ visibility: hidden;
   
 }
 }
+.menu{
+    background-image: url(./../imgs/home/menu-bg.png);
+    height: 80vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
