--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,9 @@ visibility: hidden;
     margin-top: 10%;
     flex-wrap: wrap;
 }
+.trend-label{
+    margin-left: 45%;
+}
 .description{
    font-size: 15px;
    font-family: "Space Grotesk", sans-serif;
