changes in index

--- a/css/header.css
+++ b/css/header.css
@@ -57,7 +57,7 @@ header{
     box-shadow: 0px 1px 15px #a3a3a3;
     position: sticky;
     top: 0%;
-    z-index:  100;
+    z-index:  1000;
 }
 .heading{
     font-size: 20px;
@@ -73,20 +73,21 @@ header{
     font-size: 30px;
     transition: ease-in;
 }
-.buyNow-btn{
+.buyNow-btn1{
     border: 1px solid black;
     margin: 20px;
-    padding: 15px 30px;
+    padding: 10px 20px;
     background-color:#000;
     color: #fff;
     border-radius: 60px;
     font-weight: bold;
     font-family: "Space Grotesk", sans-serif;
     text-decoration: none;
+    font-size: 20px;
     transition: all .3s ease-out;
 }
-.buyNow-btn:hover{
-    background-color:#fff;
+.buyNow-btn1:hover{
+    background-color:transparent;
     color: black;
 }
 .slide-btn-comtain{
