background url added,postion and size added

--- a/css/review_page.css
+++ b/css/review_page.css
@@ -1,6 +1,6 @@
 body{
     font-family:Arial,sans-serif;
-    background: url(./../imgs/review_page/icecreamparlour.jpg) no-repeat;
+    background: url(./../imgs/icecreamparlour.jpg) no-repeat;
     background-size: cover;
     background-position: cover;
     margin:0;
