--- a/css/index.css
+++ b/css/index.css
@@ -125,19 +125,36 @@ visibility: hidden;
 }
 .img-size{
     height: 500px;
+    overflow: hidden;
+    width: 500px;
 }
 .img-size1{
     height: 500px;
     transition: 2s;
+    width: 500px;
     cursor: pointer;
 }
-.img-size2{
-    height: 570px;
+.image-size{
+    height: 536px;
     transition: 2s;
     cursor: pointer;
+    overflow: hidden;
+}
+.img-size2{
+    height: 536px;
+    transition: 2s;
+    cursor: pointer;
+  
+}
+.img-size2:hover{
+    transform: scale(1.3);
+    transform-origin: 50% 50%;
+    opacity: .7;
 }
 .img-size1:hover{
-    height: 700px;
+    transform: scale(1.3);
+  transform-origin: 50% 50%;
+  opacity: .7;
 }
 .margin-top{
     margin-top: 12%;
