--- a/css/header.css
+++ b/css/header.css
@@ -78,6 +78,7 @@ header{
     margin: 20px;
     padding: 10px 20px;
     background-color:#000;
+    font-size: 10px;
     color: #fff;
     border-radius: 60px;
     font-weight: bold;
