--- a/css/index.css
+++ b/css/index.css
@@ -167,12 +167,15 @@ visibility: hidden;
     margin: 25px 30px;
     padding: 10px 20px;
     background-color:#000;
-    font-size: 30px;
     color: #fff;
     border-radius: 60px;
     font-weight: bold;
     font-family: "Space Grotesk", sans-serif;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
     transition: all .3s ease-out;
+}
+.buyNow-btn2:hover{
+    background-color:transparent;
+    color: #000;
 }
