--- a/css/contact_page.css
+++ b/css/contact_page.css
@@ -11,8 +11,8 @@ text-align: center;
 padding-top: 50px;
 }
 iframe{
-    margin-top: 10px;
-    /* box-shadow: 1px 1px 10px 2px rgb(14, 13, 13); */
+    margin-top: 5px;
+    /* box-shadow: 1px 1px 20px 3px rgb(14, 13, 13);  */
 }
 .contact{
     padding-left: 8px;
@@ -43,12 +43,19 @@ iframe{
 .a{
     font-size: 20px;
     text-decoration: none;
-    color: rgb(109, 102, 93);
+    color: rgb(83, 75, 60);
 }
 span{
     font-size: 20px;
     font-weight: 600;
 }
 a:hover{
-    color: rgb(0, 0, 0);
+    color: rgb(145, 82, 0);
+}
+.fa-brands{
+    font-size: 35px;
+    margin-left: 7px;
+}
+.fa-brands:hover{
+    font-size: 40px;
 }
