--- a/css/index.css
+++ b/css/index.css
@@ -33,11 +33,11 @@ body{
     margin-top: 50px;
 }
 .visit-img{
-    height: 260px;
+    height: 300px;
     margin: 2%;
     border-radius: 50%;
     padding: 18px;
-    border: 3px dashed #e83e8c;
+    border: 3px dashed #efa1c5;
     cursor: pointer;
 
 }
