--- a/css/index.css
+++ b/css/index.css
@@ -185,3 +185,18 @@ visibility: hidden;
 .prev-btn{
     background-color: white;
 }
+.product-btn{
+    background-color: #000;
+    color: #fff;
+    font-size: 14px;
+    border: 2px solid black;
+    cursor: pointer;
+    padding: 15px 20px;
+    margin: 20px 45%;
+    transition: .8s;
+    font-weight: bold;
+}
+.product-btn:hover{
+    background-color: transparent;
+    color: #000;
+}
