--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -278,9 +278,9 @@ header{
 
   }
   .flavour-container{
-    justify-content: space-between;
-    margin-left: 100px;
-   
+    margin-left: 120px;
+    text-align: center;
+  
    
   }
   .flavour-img{
@@ -300,11 +300,12 @@ header{
     cursor: pointer;
   }
   .effect-hover{
-    width:450px; 
+    width:300px; 
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-between;
     visibility: hidden;
     text-align: center;
+  
     
 
   }
@@ -314,7 +315,11 @@ header{
     justify-content: center;
     margin :10px auto;
     text-align: center;
-
+    background-color: #fff;
+    width: 250px;
+   padding: 5px 10px;
+    margin: 50px;
+    
   }
   
   .flavour-card:hover{
@@ -324,6 +329,7 @@ header{
       
     }
     border: 3px solid  #e83e8c ; 
+    
   }
   .load-more-btn{
     display: block;
