--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -247,12 +247,12 @@ header{
 
   .lightMode{
    border:#000 1px solid;
-   background-color: #fff;
+   background-color:aliceblue;
   }
-  
+
   .darkMode{ 
-    border: #fff 1px solid;
-    background-color: #fff;
+    border: aliceblue 1px solid;
+    background-color:#000;
   }
  
   .name-container{
