--- a/css/contact_page.css
+++ b/css/contact_page.css
@@ -1,99 +1,121 @@
-.header{
+.header {
     height: 200px;
     background-image: url(./../imgs/cont.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 
 }
-.head{
-font-size: 50px;
-text-align: center;
-padding-top: 50px;
+
+.head {
+    font-size: 50px;
+    text-align: center;
+    padding-top: 50px;
 }
-iframe{
+
+iframe {
     margin-top: 5px;
     /* box-shadow: 1px 1px 20px 3px rgb(14, 13, 13);  */
 }
-.contact{
+
+.contact {
     padding-left: 5px;
     width: 50%;
     padding-right: 5px;
 }
-.contact-main{
+
+.contact-main {
     margin-top: 60px;
     display: flex;
 }
-.name-customer{
+
+.name-customer {
     margin-bottom: 35px;
     width: 600px;
     height: 50px;
 }
-.message-customer{
-  
+
+.message-customer {
+
     width: 600px;
     height: 150px;
 }
-.button{
+
+.button {
     width: 600px;
-    height:50px ;
+    height: 50px;
     background-color: black;
     color: white;
 }
-.fa-solid{
+
+.fa-solid {
     font-size: 25px;
     margin-left: 10px;
 }
-.a{
+
+.a {
     font-size: 20px;
     text-decoration: none;
     color: rgb(83, 75, 60);
 }
-span{
+
+span {
     font-size: 20px;
     font-weight: 600;
 }
-a:hover{
+
+a:hover {
     color: rgb(255, 145, 0);
 }
-.fa-brands{
+
+.fa-brands {
     font-size: 35px;
     margin-left: 7px;
 }
-@media screen and (max-width:821px){
-    .contact-main{
+
+
+@media screen and (max-width:821px) {
+    .contact-main {
         margin-top: 60px;
         display: block;
     }
-    .contact{
+
+    .contact {
         padding-left: 5px;
         padding-right: 5px;
-        width: 100%;}
+        width: 100%;
+    }
 
-    .name-customer{
+    .name-customer {
         padding-right: 5px;
-            width: 100%;
-            height: 50px;
-            margin-bottom: 15px;
-        }
-    .message-customer{
+        width: 100%;
+        height: 50px;
+        margin-bottom: 15px;
+    }
+
+    .message-customer {
         padding-right: 5px;
-            width: 100%;
-            height: 100px;
-    
-        }
-    .button{padding-right: 5px;
-            width: 100%;
-            height:50px ;
-            background-color: black;
-            color: white;
-        }
-    iframe{
-     height: 300px;
-}
-.header{
-    height: 120px;
-}
-.head{
-    padding-top: 25px;
-}
+        width: 100%;
+        height: 100px;
+
+    }
+
+    .button {
+        padding-right: 5px;
+        width: 100%;
+        height: 50px;
+        background-color: black;
+        color: white;
+    }
+
+    iframe {
+        height: 300px;
+    }
+
+    .header {
+        height: 120px;
+    }
+
+    .head {
+        padding-top: 25px;
+    }
 }
