--- a/css/menu_page.css
+++ b/css/menu_page.css
@@ -241,17 +241,22 @@ header{
     .name-container{background-position: left;}
   }
   .mode-container{
-    width: 25px;
+    width: 30px;
     border-radius: 5px;
+    cursor: pointer;
+    padding: 3px 5px;
+    margin: 5px 20px;
   }
 
   .lightMode{
    border:#000 1px solid;
    background-color:aliceblue;
+   color: #000;
   }
 
   .darkMode{ 
     border: aliceblue 1px solid;
+    color: #fff;
     background-color:#000;
   }
  
