--- a/css/buy_now.css
+++ b/css/buy_now.css
@@ -15,9 +15,9 @@ body {
   }
   input {
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 3px solid black;
     border-radius: 4px;
   }
   button {
