use js in index

--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,9 @@ header{
     background-size:cover;
     /* width: 100%;                     Set the type of gradient (linear or radial) */
 }
+.hamburger{
+  display: none;
+}
 .flex{
     display: flex;
 }
@@ -117,7 +120,7 @@ header{
     width: 100%;
     display: none;
     position: fixed;
-    z-index: 999;
+    z-index: 1999;
     top: 0;
     left: 0;
     transition: 0.5s; 
@@ -184,7 +187,7 @@ header{
   .overlay button:hover {
     background: #000;
   }
-  .sidenav {
+  .sidenav1 {
     height: 100%; 
     font-family: "Space Grotesk", sans-serif;
     width: 0; 
@@ -200,7 +203,7 @@ header{
   }
   
   /* The navigation menu links */
-  .sidenav a {
+  .sidenav1 a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -208,13 +211,13 @@ header{
     display: block;
     transition: 0.3s;
   }
-  .cart{
+  .cart1{
     font-family: "Space Grotesk", sans-serif;
     margin-left: 30%;
     font-size: 20px;
     font-weight: bold;
   }
-  .sidenav .closebtn {
+  .sidenav1 .closebtn1 {
     position: absolute;
     top: 0;
     font-family: "Space Grotesk", sans-serif;
@@ -222,8 +225,56 @@ header{
     font-size: 36px;
     margin-right: 5px;
   }
-  .closebtn:hover{
+  .closebtn1:hover{
     color: #e83e8c;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav1 {padding-top: 15px;}
+    .sidenav1 a {font-size: 18px;}
+  }
+  .sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 2999; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
   }
   
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -236,5 +287,24 @@ header{
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+  }
+
+  @media screen and (max-width:1200px) {
+    .logo{
+      position: absolute;
+      left: 300%;
+    }
+    .hamburger{
+      display:  inline-block;
+    }
+    .mid-flex{
+      display: none;
+    }
+    .login-icon{
+      display: none;
+    }
+    .heart-icon{
+      display: none;
+    }
   }
   
