--- a/css/index.css
+++ b/css/index.css
@@ -231,6 +231,52 @@ visibility: hidden;
 .card-img:hover{
     transform: scaleY(1);
 }
-@media screen (max-width:1200px)  {
+@media screen and (max-width:1300px) {
+    .visit-img{
+        height: 230px;
+    }
+
+}
+@media screen and (max-width:1200px) {
+    .visit-img{
+        height: 200px;
+    }
+}
+@media screen and (max-width:1000px) {
+    .visit-img3{
+        display: none;
+    }
+
+}
+@media screen and (max-width:718px) {
+    .visit-img{
+       margin: 1%;
+    }
+
     
+}
+@media screen and (max-width:670px) {
+    .visit-img{
+       height:  150px;
+    }
+
+}
+@media screen and (max-width:512px) {
+    .visit-img2{
+       display: none;
+    }
+    .visit-img{
+        margin: 3%;
+    }
+
+
+}
+@media screen and (max-width:364px) {
+    .visit-img1{
+       display: none;
+    }
+    .visit-img{
+        margin-left: 10%;
+    }
+
 }
