--- a/css/index.css
+++ b/css/index.css
@@ -51,8 +51,11 @@ body{
 }
 .seller-heading{
     margin: 50px 38%;
-    flex-direction: row;
-    gap: 100px;
+    /* flex-direction: row;
+    gap: 100px; */
+    display: block;
+    justify-content: space-between;
+    word-spacing: 0rem;
     font-size: 20px;
 }
 .product-container{
@@ -60,6 +63,18 @@ body{
 }
 .products{
     height: 300px;
+}
+.hover-image{
+    background-color: #fff;
+    box-shadow: 0 2px 5px black;
+    padding: 10px;
+    border-radius: 30px;
+    height: 40px;
+    cursor: pointer;
+    margin: 4px;
+}
+.hover-image:hover{
+    background-color: #e83e8c;
 }
 /* background-color: #e83e8c;
 color: white;
