--- a/css/product-card.css
+++ b/css/product-card.css
@@ -42,6 +42,7 @@ body{
     height:160px;
     cursor:pointer;
     justify-content:space-around;
+    margin-left:90px;
 }
  .product-image:hover{
     border: 3px solid  #e83e8c;
@@ -52,30 +53,32 @@ body{
     width:450px;
 }
 .ice-des{
-    width:400px;
-    margin:-350px 700px;
+   justify-content: center;
+   align-items:center;
 }
 .products{
     margin:-10px;
     margin-top:50px 10px;
-    justify-content:space-between;
+    justify-content:center;
 }
 .product-container{
     margin:400px 22px;
 }
 .product-content{
-    margin:-330px 3px;
+    margin:-330px 10px;
+    justify-content: space-between;
 }
 .card{
     margin:5px -2px;
-    border-radius:10px;
    
-    
+    border:none;
+    box-shadow:0px 0px 2px #e83e8c;
+   
 }
 .card:hover{
-    border: 3px solid  #e83e8c;
+    border: 1px solid  #e83e8c;
     opacity:.7;
-    border-radius:10px;
+    border-radius:5px;
 }
 .container{
     margin:10px 10px;
