--- a/css/product-card.css
+++ b/css/product-card.css
@@ -109,13 +109,24 @@ body{
     font-size:20px;
     margin-top:-15px;
 }
-.nutrient{
-    margin:10px;
-    padding:6px;
-    border-radius:10px;
-    width:240px;
-    font-size:20px;
-}
 .chocobar{
     object-fit:cover;
+}
+.btn{
+    border: 1px solid black;
+    margin: 25px 30px;
+    padding: 10px 20px;
+    background-color:#000;
+    color: #fff;
+    border-radius: 60px;
+    font-weight: bold;
+    font-family: "Space Grotesk", sans-serif;
+    text-decoration: none;
+    font-size: 15px;
+    transition: all .3s ease-out;
+}
+.btn:hover{
+    background-color:transparent;
+    color: #000;
+    border :1px solid black;
 }
