--- a/css/product-card.css
+++ b/css/product-card.css
@@ -150,8 +150,11 @@ body{
     }
     }
     #plus{
-        height:35px;
         cursor:pointer;
+    }
+    #plus:hover{
+        color:red;
+        background-color:white;
     }
     #minus{
         cursor:pointer;
