--- a/css/product-card.css
+++ b/css/product-card.css
@@ -114,21 +114,22 @@ body{
 }
 .btn{
     border: 1px solid black;
-    margin: 25px 30px;
+    margin: 25px 1px;
     padding: 10px 20px;
-    background-color:#000;
-    color: #fff;
+    background-color:#e83e8c;
+    color: white;
     border-radius: 60px;
     font-weight: bold;
     font-family: "Space Grotesk", sans-serif;
     text-decoration: none;
     font-size: 15px;
     transition: all .3s ease-out;
+    border:none;
 }
 .btn:hover{
-    background-color:transparent;
-    color: #000;
-    border :1px solid black;
+    background-color:white;
+    color: #e83e8c;
+    border :1px solid #e83e8c;
 }
 .effect-hover{
     width:200px;
@@ -151,6 +152,10 @@ body{
     }
     #plus{
         cursor:pointer;
+    }
+    #plus:hover{
+       
+        color:white;
     }
     #minus{
         cursor:pointer;
