mq apply to some places

--- a/css/product-card.css
+++ b/css/product-card.css
@@ -175,4 +175,26 @@ body{
         height:300px;
         box-shadow:0px 0px 1px #e83e8c;
     }
+    /*media query apply*/
+    @media screen and (max-width: 500px) {
+        .main-img{
+            width:100%;
+            height:200px;
+            margin-left:15%;
+        }
+        .first{
+            display: block;
+        }
+        .things{
+            visibility:none;
+        }
+      
+
+    }
+
+    @media (max-width:768px) {
+        .women {
+            display: none;
+        }
+    }
    
