--- a/css/menu-page.css
+++ b/css/menu-page.css
@@ -291,23 +291,24 @@ header{
   
   }
   .filter-container{
-    width:100px;
-    margin: 50px 80px;
-    padding: 10px;
-    border-radius: 2px;
-    border: #000 1px solid;
-    display: flex;
-    justify-content: space-around;
-    background-color:white;
-    color:black;
+    width: 200px;
+    text-align: center;
+    border: 1px solid #e83e8c ;
+    margin: 25px 30px;
+    padding: 10px 20px;
+    background-color:#e83e8c;
+    color: #fff;
+    border-radius: 60px;
+    font-weight: bold;
+    font-family: "Space Grotesk", sans-serif;
     text-decoration: none;
+    font-size: 15px;
+    transition: all .3s ease-out;
   }
   .filter-container:hover{
-    background-color: #e83e8c;
-    color: white;
-    border:#e83e8c 1px solid;
-    text-decoration: none;
-
+    background-color:transparent;
+    color: #e83e8c;
+    border :1px solid #e83e8c;
   }
   .flavour-container{
     margin-left: 120px;
@@ -334,7 +335,8 @@ header{
   .effect-hover{
     width:300px; 
     display: flex;
-    justify-content:space-between;
+    padding: 20px 30px;
+    justify-content: space-around;
     visibility: hidden;
     text-align: center;
   
@@ -381,14 +383,17 @@ header{
   }
 
   .category-div{
-      width: 200px;
-      
-      margin: 60px auto;
-      display: block;
-      text-align: center;
-      padding: 10px 0px;
-      border-radius: 10px;
-      cursor: pointer;
+    border: 1px solid #e83e8c ;
+    margin: 25px 30px;
+    padding: 10px 20px;
+    background-color:#e83e8c;
+    color: #fff;
+    border-radius: 60px;
+    font-weight: bold;
+    font-family: "Space Grotesk", sans-serif;
+    text-decoration: none;
+    font-size: 15px;
+    transition: all .3s ease-out;
   }
   .deco-text{
     color: #000;
