--- a/css/contact-page.css
+++ b/css/contact-page.css
@@ -42,10 +42,18 @@ iframe {
 }
 
 .button {
+    border: none;
     width: 600px;
     height: 50px;
-    background-color: black;
+    background-color: palevioletred;
     color: white;
+}
+.button:hover {
+    border: solid 1px palevioletred;;
+    width: 600px;
+    height: 50px;
+    background-color: rgb(255, 254, 254);
+    color:  rgb(255, 162, 178);
 }
 
 .fa-solid {
