--- a/css/login-page.css
+++ b/css/login-page.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/imgs/about-page-img/login-img.webp); 
+    background: url(./../imgs/about-page-img/log-in-page.png); 
     backdrop-filter: blur(4px);
     margin: 0;
     padding: 0;
