--- a/css/footer.css
+++ b/css/footer.css
@@ -1,37 +1,43 @@
 
 .foot {
+    color: rgb(228, 91, 113);
+    margin-bottom: 30px;
     font-size: 30px;
-    color: #ffb860;
-    padding: 15px;
+   
+    padding: 30px;
 
 
 }
 
-
+hr{
+    width: 80px;
+    background: rgb(255, 109, 133);
+    height: 3px !important;
+}
 .footer {
     font-size: 18px;
     text-decoration: none;
     padding: 5px;
 }
 
-.a{
+.b{
     text-decoration: none;
     color:white;
     font-weight:100;
 }
 
-.contact {
+.contact1 {
     position: absolute;
     left: 40%;
     font-size: 30px;
-    color: #ffb860;
-    padding: 15px;
+    color: rgb(228, 91, 113);
+    padding: 30px;
 }
 
 .main {
     display:flex;
     flex-wrap: wrap;
-    background-color: rgb(87, 79, 84);
+    background-color: rgb(32, 31, 31);
     width: 100%;
 
 }
@@ -40,38 +46,34 @@
     position: absolute;
     right: 1%;
     font-size: 30px;
-    color: #ffb860;
-    padding: 15px;
+    color: rgb(228, 91, 113);
+    padding: 30px;
 }
 
-.fa-solid {
-    color: white;
+.fa-sol {
+    color: rgb(255, 255, 255);
 }
 
-.fa-brands {
+.fa-brand {
     color: white;
     font-size: 25px;
 }
-.fa-brands:hover{
+.fa-brand:hover{
     color: #ffb860;
     
 }
 
-.a:hover {
+.b:hover {
     color: #ffb860;
     text-decoration: underline;
 }
 
-.fa-fort-awesome{
-    font-size: larger;
-}
-.fa-fort-awesome:hover{
-color: white;
 
-}
+
+
 @media screen and (max-width:600px){
     
-    .contact{
+    .contact1{
         display: block;
         position: static;
     }
@@ -81,7 +83,7 @@ color: white;
     }
 }
 @media screen and (min-width:601px) and (max-width:931px){
-    .contact{
+    .contact1{
         display: block;
         position: static;
         margin-left: 30%;
@@ -95,7 +97,7 @@ color: white;
     }
 }
 @media screen and (min-width:930px) and (max-width:1200px){
-    .contact{
+    .contact1{
         display: block;
         position: static;
         }
@@ -105,3 +107,4 @@ color: white;
         
     }
 }
+/* #ffb860; */
