--- a/css/menu-page.css
+++ b/css/menu-page.css
@@ -336,11 +336,23 @@ header{
     width:300px; 
     display: flex;
     padding: 20px 30px;
-    justify-content: space-around;
+    justify-content: space-between;
     visibility: hidden;
     text-align: center;
   
   }
+  .hover-image{
+   
+    box-shadow: 0 2px 5px black;
+    padding: 10px;
+    border-radius: 30px;
+    height: 40px;
+    cursor: pointer;
+    margin: 4px;
+}
+.hover-image:hover{
+    background-color: #e83e8c;
+}
   .flavour-card{
     border-radius: 20px;
     display: block;
@@ -351,7 +363,9 @@ header{
     width: 250px;
    padding: 5px 10px;
     margin: 50px;
-    
+   box-shadow:1px 1px 12px #e83e8c;
+    border:#000 1px solid
+       
   }
   
   .flavour-card:hover{
@@ -360,7 +374,7 @@ header{
         transition:1.25s;
       
     }
-    border: 3px solid  #e83e8c ; 
+    border: 1px solid  #e83e8c ; 
     
   }
   .load-more-btn{
@@ -384,7 +398,7 @@ header{
 
   .category-div{
     border: 1px solid #e83e8c ;
-    margin: 25px 30px;
+    margin: 25px 20px;
     padding: 10px 20px;
     background-color:#e83e8c;
     color: #fff;
@@ -394,6 +408,7 @@ header{
     text-decoration: none;
     font-size: 15px;
     transition: all .3s ease-out;
+    
   }
   .deco-text{
     color: #000;
