--- a/css/footer.css
+++ b/css/footer.css
@@ -52,19 +52,20 @@ hr{
 
 .fa-sol {
     color: rgb(255, 255, 255);
+    font-size: 20px;
 }
 
 .fa-brand {
     color: white;
-    font-size: 25px;
+    font-size: 30px;
 }
 .fa-brand:hover{
-    color: #ffb860;
+    color: rgb(228, 91, 113);
     
 }
 
 .b:hover {
-    color: #ffb860;
+    color:rgb(228, 91, 113);
     text-decoration: underline;
 }
 
