--- a/css/menu-page.css
+++ b/css/menu-page.css
@@ -413,3 +413,24 @@ header{
   .deco-text{
     color: #000;
   }
+  .card-btn{
+    display:flex;
+    flex-direction: row;
+  
+  }
+
+  .incardbtn{
+    
+    width: 400px;
+    padding: 10px 20px;
+    border-radius: 40px;
+    justify-content:center;
+    text-align: center;
+    background-color:#e83e8c;
+    color: #fff;
+    font-weight: bold;
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 15px;
+    transition: all .3s ease-out;
+    margin-left: 10px;
+  }
