--- a/css/product-card.css
+++ b/css/product-card.css
@@ -189,15 +189,14 @@ body{
         .main-img{
             width:100%;
             height:200px;
-            background-position: center;
+            margin-left: 25px;
             object-fit: cover;
          }
        .product-card{
         height:100px;
        }
        .ice-des{
-        justify-content: center;
-        align-items:center;
+     margin-left:50px;
      }
      .product-content{
        visibility:hidden;
@@ -205,9 +204,37 @@ body{
     .addtocart{
         visibility:hidden;
     }
-      
+    .ice-des{
+      margin-left:100px;
 
     }
+    .more{
+        margin-bottom:30px;
+    }
+    .container{
+           justify-content:center;
+    text-align:center;
+    background-color:white;
+    border:1px solid black;
+    border-radius:20px;
+    box-shadow:1px 1px 2px black;
+    width:200px;
+    height:400px;
+    box-shadow:1px 1px 12px #e83e8c;
+    justify-content:center;
+   
+
+    }
+    .icecream{
+        width:200px;
+    }
+    .icecream1{
+        width:200px;
+    }
+    .btn{
+        visibility: hidden;
+    }
+}
 
     @media (max-width:768px) {
         .women {
