--- a/css/about-us.css
+++ b/css/about-us.css
@@ -50,6 +50,15 @@
     box-shadow: 0 0 15px 9px #c2c2a3;
 }
 
+.gradient{
+    background-image: url(/img/gradient.png);
+    height: 520px;
+}
+
+.icon{
+    height: 150px;
+}
+
 .card{
     box-shadow: 10px 10px 20px 2px #e1e1d0;
    padding: 4px;
