--- a/css/header.css
+++ b/css/header.css
@@ -56,6 +56,8 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
 /* padding: 10px; */
     margin: auto;
     height: 100px;
