--- a/css/product-card.css
+++ b/css/product-card.css
@@ -25,6 +25,9 @@ body{
     color:white;
     text-align:center;
 }
+.point{
+    cursor: pointer;
+}
 
 #choco2{
     width:350px;
@@ -32,12 +35,12 @@ body{
     object-fit:cover;
     border:1px solid black;
     border-radius:20px;
-    box-shadow:0px 0px 10px rgba(0,0,0,25);
     margin:auto 130px;
     
 }
 #choco2:hover{
-    border: 3px solid  #e83e8c;
+    border: 1px solid  #e83e8c;
+   
 }
 .product-image{
     height:160px;
@@ -46,7 +49,7 @@ body{
     margin-left:90px;
 }
  .product-image:hover{
-    border: 3px solid  #e83e8c;
+    border: 1px solid  #e83e8c;
     opacity: .8;
     border-radius:10px;
  }
@@ -74,7 +77,6 @@ body{
     margin:5px -2px;
    
     border:none;
-    box-shadow:0px 0px 2px #e83e8c;
    
 }
 .card:hover{
@@ -89,11 +91,12 @@ body{
     background-color:white;
     border:1px solid black;
     border-radius:20px;
-    box-shadow:1px 1px 2px black;
     width:300px;
     height:400px;
-    box-shadow:1px 1px 12px #e83e8c;
     justify-content:space-between;
+}
+.container:hover{
+    border: 1px solid  #e83e8c;
 }
 .icecream{
     background-color:#c3ced9;
@@ -175,11 +178,17 @@ body{
     }
     .icecones{
         height:300px;
-        box-shadow:0px 0px 1px #e83e8c;
+       border-radius: 10px;
+        border :1px solid black;
+    }
+    .icecones:hover{
+        border :1px solid #e83e8c;
+
     }
     .addtocart{
-      width:300px;
+      width:350px;
         text-align:center;
+      
     }
     /*media query apply*/
     @media screen and (max-width: 500px) {
@@ -212,7 +221,7 @@ body{
         margin-bottom:30px;
     }
     .container{
-           justify-content:center;
+    justify-content:center;
     text-align:center;
     background-color:white;
     border:1px solid black;
@@ -220,7 +229,6 @@ body{
     box-shadow:1px 1px 2px black;
     width:200px;
     height:400px;
-    box-shadow:1px 1px 12px #e83e8c;
     justify-content:center;
    
 
