--- a/css/index.css
+++ b/css/index.css
@@ -336,7 +336,7 @@ center {
 .menu-discripton {
     text-align: center;
     position: relative;
-    top: 450px;
+    top: 52%;
     width: 60%;
     left: 50%;
     transform: translate(-50%, -70%);
@@ -356,16 +356,16 @@ center {
 
 .menu-product {
     position: relative;
-    top: 450px;
+    top: 50%;
 }
 
 .card-img {
     margin-left: 14%;
-    transition: .4s;
+    transition: .8s;
 }
 
 .card-img:hover {
-    transform: scaleY(1);
+    margin-top: -10% ;
 }
 
 /* .container1 {
@@ -405,19 +405,19 @@ center {
   .fa-user:hover {
     color: #e83e8c;
   } */
-.insta-image-div {
-    height: 275px important !;
-    width: 275px;
+.insta-img-div {
+    height: 300px ;
+    width: 300px;
     overflow: hidden;
 }
 
 .insta-image {
-    transition: 5.3s;
-    overflow: hidden;
+    transition: 3.3s;
 }
 
 .insta-image:hover {
-    transform: scale(2.3);
+    transform: scale(1.3);
+    opacity: .3;
 }
 
 @media screen and (max-width:1300px) {
