--- a/css/review-page.css
+++ b/css/review-page.css
@@ -2,14 +2,15 @@
 
 
 body{
-    background: #eef3f7;
+    background:white;
     font-family: 'Poppins', sans-serif;
 }
 .bag{
-    background-color: #fb5f04;
+    background-color: white;
+    border:1px solid black;
 }
 .bod{
-    border: 1px solid #fb5f04;
+    border: 1px solid black;
 }
 .wdt{
     width: 50px;
@@ -19,10 +20,10 @@ body{
     background-color: rgba(198, 196, 196, 0.213);
 }
 .r-bag{
-    background-color: #eef3f7;
+    background-color: white;
 }
 .ha{
-    color: #fb5f04;
+    color: white;
 }
 .img-card-1{
     cursor: pointer;
@@ -30,4 +31,10 @@ body{
 }
 .img-card-1:hover {
     transform: translateY(-10px);
+}
+.bag:hover{
+background-color: #e83e8c;
+}
+.bod:hover{
+    background-color: #e83e8c;
 }
