--- a/css/product-card.css
+++ b/css/product-card.css
@@ -94,13 +94,13 @@ body{
     width:300px;
     height:400px;
     justify-content:space-between;
+    
 }
 .container:hover{
     border: 1px solid  #e83e8c;
 }
 .icecream{
     background-color:#c3ced9;
-    width:320px;
     margin:5px 15px;
     border-radius:10px;
 }
@@ -190,6 +190,36 @@ body{
         text-align:center;
       
     }
+    /*zoom effect*/
+
+.zoom-img{
+    height: 300px;
+    width: 300px;
+    overflow: hidden;
+    position: relative;
+}
+
+.insta-image {
+    transition: 3.3s;
+}
+
+.insta-image:hover {
+    transform: scale(1.3);
+    opacity: .3;
+}
+.middle-insta{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.insta-img-div:hover .middle-insta {
+    opacity: 1;
+  }
     /*media query apply*/
     @media screen and (max-width: 500px) {
         body{
